commit by the dev-B

--- a/sample.html
+++ b/sample.html
@@ -5,6 +5,7 @@
 </head>  
 <body>  
 <h1>Write Your First Heading</h1>  
-<p>Write Your First Paragraph.</p>  
+<p>Write Your First Paragraph.</p>
+<p>hi kailasam</p>
 </body>  
 </html>  
